# content-cruise

./: AGENT_WORKFLOW.md  ARCHITECTURE.md  HACKATHON_DOCUMENTATION.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  quick-start.md
marketing/: .env.example  AI-Powered-Marketing-Automation-2025.txt  AI-powered Marketing Automation Report Performance Analysis.txt  AI_Marketing_Automation_Report.md  AI_Marketing_Automation_for_SMBs.txt  HACKATHON_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  UI_README.md  WORKFLOW_GUIDE.md  blog_post.txt  campaign_status.json  crew_execution.log.txt  final_report.md  polished_blog_post.txt  pyproject.toml  requirements.txt  streamlit_ui_guide.md
marketing/content/ai-powered-marketing-automation-small-2025/: FINAL_CAMPAIGN_REPORT.md
marketing/content/ai-powered-marketing-automation-small-2025/analysis/: audio_slogan_feedback.md  distribution_feedback.md  quick-improvements.md  strategic-optimization.md
marketing/content/ai-powered-marketing-automation-small-2025/audio/: slogans.md
marketing/content/ai-powered-marketing-automation-small-2025/blogs/: ai-marketing-guide.md  ai_marketing_blog_post.txt  optimized-ai-marketing-guide.md
marketing/content/the-benefits-of-hydroponic-vertical-farming-for-urban-restaurants-in-london-chefs-2025/: FINAL_CAMPAIGN_REPORT.md
marketing/content/the-future-of-cloud-computing-for-e-commerce-ctos-2025/: FINAL_CAMPAIGN_REPORT.md
marketing/knowledge/: user_preference.txt
marketing/src/marketing/: app_streamlit.py  crew.py  main.py
(+53 files in other folders)
