[project]
name = "deep-dive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.4.16",
    "crewai-tools>=0.48.0",
    "google-search-results>=2.4.2",
    "langsmith>=0.3.45",
    "sarvamai>=0.1.9",
    "streamlit>=1.46.1",
]
